# resource-table

./: Cargo.toml  README.md  build.rs  resource-table.x
.github/workflows/: build-test.yaml  docs.yaml
src/: carveout.rs  constants.rs  devmem.rs  lib.rs  macro.rs  trace.rs  types.rs  util.rs
