[package]
name = "resource-table"
version = "0.1.0"
edition = "2024"

description = "Utilites for using remote processor resource tables."
authors = ["Aaron Griffith <aargri@gmail.com>"]
repository = "https://github.com/agrif/resource-table"
documentation = "https://docs.rs/resource-table"
readme = "README.md"
license = "MIT"

keywords = ["rproc", "remoteproc", "resource-table"]
categories = ["data-structures", "embedded", "no-std", "no-std::no-alloc"]

[package.metadata.docs.rs]
# use a 32-bit target for docs, and might as well be embedded
default-target = "thumbv6m-none-eabi"

[dependencies]
